# dagster_designer

./: .gitignore  ARCHITECTURE.md  CLI_INTEGRATION_SUMMARY.md  CODE_EDITOR_ARCHITECTURE.md  CODE_EDITOR_IMPLEMENTATION.md  COMPLETE_FEATURE_SUMMARY.md  COMPONENT_ASSET_MODEL.md  DAGSTER_1.12_FEATURES.md  DAGSTER_CLI_INTEGRATION.md  ENHANCEMENTS_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  KEY_FILES_SUMMARY.md  MIGRATION_TO_CLI.md  PROJECT_IMPORT_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATE_BACKED_COMPONENTS.md  TEMPLATE_SYSTEM.md  UI_GUIDE.md  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
.claude/: settings.json
backend/: pyproject.toml  requirements.txt  restart_backend.sh  start_backend.sh  test_dependency_manager.py
backend/app/: __init__.py  main.py
backend/app/api/: alerts.py  assets.py  codegen.py  components.py  dagster.py  dagster_webserver.py  dbt_adapters.py  dbt_cloud.py  dependencies.py  env_vars.py  environment_config.py  files.py  genie.py  git.py  integrations.py  pipeline_templates.py  pipelines.py  primitives.py  projects.py  runs.py  templates.py  templates_registry.py
backend/app/core/: config.py
backend/app/models/: component.py  freshness.py  graph.py  partition.py  project.py
backend/dagster_designer_components/: __init__.py  asset_check.py  dbt_project_with_translator.py  dbt_translator.py  freshness_policy.py  job.py  python_asset.py  schedule.py  sensor.py  sql_asset.py  sql_transformer.py
backend/scripts/: __init__.py  preview_asset.py  show_config.py  show_partitions.py
(+124 files in other folders)
